unpackaged/objects/copado__Selenium_Test_Suite__c.object
<CustomObject>
	<fields>
		<fullName>copado__Apex_code_after_test__c</fullName>
		<inlineHelpText>Optional Apex code to execute after running this test suite. You can use variable {!NS} to be replaced with the Namespace for the running Environment.</inlineHelpText>
		<label>Apex code after test</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Apex_code_before_test__c</fullName>
		<inlineHelpText>Optional Apex code to execute before running this test suite.  It can be used to clean up or create data. You can use variable {!NS} to be replaced with the Namespace for the running Environment.</inlineHelpText>
		<label>Apex code before test</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Notes__c</fullName>
		<label>Notes</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>copado__Test_Script__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<inlineHelpText>This lookup relates to the Copado Change Management test scripts that are related to User Stories.</inlineHelpText>
		<label>Test Script</label>
		<referenceTo>copado__Test_Script__c</referenceTo>
		<relationshipLabel>Selenium Test Suites</relationshipLabel>
		<relationshipName>SeleniumTestSuites</relationshipName>
		<type>Lookup</type>
	</fields>
	<label>Selenium Test Suite</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Test_Script__c</columns>
		<columns>CREATEDBY_USER</columns>
		<columns>CREATED_DATE</columns>
		<columns>UPDATEDBY_USER</columns>
		<columns>LAST_UPDATE</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Selenium Test Suite Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Selenium Test Suites</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>